# test-runner

./: .gitattributes  LICENSE  README.md  pyproject.toml  run
.github/workflows/: release.yml  tests.yml
shell/: __init__.py  cli.py
source/: tester.py
source/core/: bus.py  discover.py  execute.py
source/platform/: filesystem.py  observer.py
test_runner/: __main__.py  runner.py
tests/: runner_test.py
