[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "test-runner"
version = "0.1.0"
description = "Minimal test runner — discovers files, runs tests, reports results"
requires-python = ">=3.11"

[project.scripts]
test-runner = "test_runner.__main__:main"
