[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eternego-test-runner"
version = "0.2.0"
description = "Minimal test runner — discovers files, runs tests, reports results"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
test-runner = "shell:main"

[tool.setuptools.packages.find]
include = ["source*", "shell*"]
